@@ -141,10 +141,12 @@ typedef enum _gnubgcommand {
     CMD_NEW_SESSION,
     CMD_NEXT,
     CMD_NEXT_GAME,
+    CMD_NEXT_MARKED,
     CMD_NEXT_ROLL,
     CMD_PLAY,
     CMD_PREV,
     CMD_PREV_GAME,
+    CMD_PREV_MARKED,
     CMD_PREV_ROLL,
     CMD_QUIT,
     CMD_RECORD_ADD_GAME,
@@ -215,10 +217,12 @@ static char *aszCommands[ NUM_CMDS ] = {
     "new session",
     "next",
     "next game",
+    "next marked",
     "next roll",
     "play",
     "previous",
     "previous game",
+    "previous marked",
     "previous roll",
     "quit",
     "record add game",
@@ -2285,18 +2289,6 @@ extern int InitGTK( int *argc, char ***argv ) {
 	{ N_("/_Game/-"), NULL, NULL, 0, "<Separator>" },
 	{ N_("/_Game/Swap players"), NULL, Command, CMD_SWAP_PLAYERS, NULL },
 	{ N_("/_Game/-"), NULL, NULL, 0, "<Separator>" },
-	{ N_("/_Game/Next roll"), "Page_Down", Command, CMD_NEXT_ROLL, NULL },
-	{ N_("/_Game/Previous roll"), "Page_Up", 
-          Command, CMD_PREV_ROLL, NULL },
-	{ N_("/_Game/Next move"), "<shift>Page_Down", 
-          Command, CMD_NEXT, NULL },
-	{ N_("/_Game/Previous move"), "<shift>Page_Up", 
-          Command, CMD_PREV, NULL },
-	{ N_("/_Game/Next game"), "<control>Page_Down", Command, CMD_NEXT_GAME,
-	  NULL },
-	{ N_("/_Game/Previous game"), "<control>Page_Up", 
-          Command, CMD_PREV_GAME, NULL },
-	{ N_("/_Game/-"), NULL, NULL, 0, "<Separator>" },
 	{ N_("/_Game/Set cube..."), NULL, GTKSetCube, 0, NULL },
 	{ N_("/_Game/Set _dice..."), NULL, GTKSetDice, 0, NULL },
 	{ N_("/_Game/Set _turn"), NULL, NULL, 0, "<Branch>" },
@@ -2306,6 +2298,26 @@ extern int InitGTK( int *argc, char ***argv ) {
 	  "/Game/Set turn/0" },
 	{ N_("/_Game/-"), NULL, NULL, 0, "<Separator>" },
 	{ N_("/_Game/Match information..."), NULL, GTKMatchInfo, 0, NULL },
+	{ N_("/_Navigate"), NULL, NULL, 0, "<Branch>" },
+	{ N_("/_Navigate/Previous rol_l"), "Page_Up", 
+          Command, CMD_PREV_ROLL, NULL },
+	{ N_("/_Navigate/Next _roll"), "Page_Down",
+	  Command, CMD_NEXT_ROLL, NULL },
+	{ N_("/_Navigate/-"), NULL, NULL, 0, "<Separator>" },
+	{ N_("/_Navigate/_Previous move"), "<shift>Page_Up", 
+          Command, CMD_PREV, NULL },
+	{ N_("/_Navigate/Next _move"), "<shift>Page_Down", 
+          Command, CMD_NEXT, NULL },
+	{ N_("/_Navigate/-"), NULL, NULL, 0, "<Separator>" },
+	{ N_("/_Navigate/Previous marke_d move"), "<control><shift>Page_Up", 
+          Command, CMD_PREV_MARKED, NULL },
+	{ N_("/_Navigate/Next mar_ked move"), "<control><shift>Page_Down", 
+          Command, CMD_NEXT_MARKED, NULL },
+	{ N_("/_Navigate/-"), NULL, NULL, 0, "<Separator>" },
+	{ N_("/_Navigate/Pre_vious game"), "<control>Page_Up", 
+          Command, CMD_PREV_GAME, NULL },
+	{ N_("/_Navigate/Next _game"), "<control>Page_Down",
+	  Command, CMD_NEXT_GAME, NULL },
 	{ N_("/_Analyse"), NULL, NULL, 0, "<Branch>" },
 	{ N_("/_Analyse/_Evaluate"), "<control>E", Command, CMD_EVAL, NULL },
 	{ N_("/_Analyse/_Hint"), "<control>H", Command, CMD_HINT, NULL },
@@ -7077,6 +7089,10 @@ extern void GTKSet( void *p ) {
 	    pif, CMD_NEXT ), plGame != NULL );
 	gtk_widget_set_sensitive( gtk_item_factory_get_widget_by_action(
 	    pif, CMD_PREV ), plGame != NULL );
+	gtk_widget_set_sensitive( gtk_item_factory_get_widget_by_action(
+	    pif, CMD_NEXT_MARKED ), plGame != NULL );
+	gtk_widget_set_sensitive( gtk_item_factory_get_widget_by_action(
+	    pif, CMD_PREV_MARKED ), plGame != NULL );
 	gtk_widget_set_sensitive( gtk_item_factory_get_widget_by_action(
 	    pif, CMD_NEXT_GAME ), !ListEmpty( &lMatch ) );
 	gtk_widget_set_sensitive( gtk_item_factory_get_widget_by_action(
